--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "reselect": "^3.0.1"
   },
   "peerDependencies": {
+    "@material-ui/core": "^1.0.0",
     "@material-ui/icons": "^1.0.0-beta.43",
-    "material-ui": "^1.0.0-beta.43",
     "react": "^15.0.0 || ^16.0.0",
     "react-dom": "^15.0.0 || ^16.0.0"
   },
   "devDependencies": {
+    "@material-ui/core": "^1.0.0",
     "@material-ui/icons": "^1.0.0-beta.43",
     "@types/jest": "^22.2.3",
     "@types/react": "^16.3.13",
@@ -40,7 +41,6 @@
     "@types/recompose": "^0.26.1",
     "cross-env": "^5.1.4",
     "gh-pages": "^1.1.0",
-    "material-ui": "^1.0.0-beta.43",
     "prettier": "1.12.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
