--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
   },
   "peerDependencies": {
     "@material-ui/core": "^1.0.0",
-    "@material-ui/icons": "^1.0.0-beta.43",
+    "@material-ui/icons": "^1.0.0",
     "react": "^15.0.0 || ^16.0.0",
     "react-dom": "^15.0.0 || ^16.0.0"
   },
   "devDependencies": {
     "@material-ui/core": "^1.0.0",
-    "@material-ui/icons": "^1.0.0-beta.43",
+    "@material-ui/icons": "^1.0.0",
     "@types/jest": "^22.2.3",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
