--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:watch": "react-scripts-ts test --env=jsdom",
     "build": "rollup -c",
     "start": "rollup -c -w",
+    "prepublish": "yarn run build",
     "predeploy": "cd example && yarn install && yarn run build",
     "deploy": "gh-pages -d example/build",
     "bundle": "yarn run build && rm ma-common.tgz && tar -cvzf ma-common.tgz -X .npmignore .",
