--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "author": "kaltsimon",
   "license": "MIT",
   "repository": "kaltsimon/ma-common",
-  "main": "dist/index.js",
-  "module": "dist/index.es.js",
-  "jsnext:main": "dist/index.es.js",
-  "types": "dist/index.d.ts",
+  "main": "build/cjs/index.js",
+  "module": "build/es/index.js",
+  "jsnext:main": "build/es/index.js",
+  "types": "dist/es/index.d.ts",
   "scripts": {
     "test": "cross-env CI=1 react-scripts-ts test --env=jsdom",
     "test:watch": "react-scripts-ts test --env=jsdom",
-    "build": "rollup -c",
-    "start": "rollup -c -w",
+    "build": "tsc -p tsconfig.json && tsc -p tsconfig.cjs.json",
+    "start": "tsc -w",
     "prepublish": "yarn run build",
     "predeploy": "cd example && yarn install && yarn run build",
     "deploy": "gh-pages -d example/build",
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@types/react-redux": "^5.0.19",
+    "classnames": "^2.2.5",
     "react-redux": "^5.0.7",
     "recompose": "^0.27.0",
     "redux": "^4.0.0",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@material-ui/core": "^1.0.0",
     "@material-ui/icons": "^1.0.0",
+    "@types/classnames": "^2.2.3",
     "@types/jest": "^22.2.3",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
