--- a/example/package.json
+++ b/example/package.json
@@ -5,13 +5,13 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^1.0.0",
     "@material-ui/icons": "^1.0.0-beta.43",
     "ma-common": "link:..",
-    "material-ui": "^1.0.0-beta.44",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "^1.1.1"
+    "react-scripts": "^1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
