--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
-    "outDir": "build/es",
-    "module": "esnext",
+    "outDir": "build/cjs",
+    "module": "commonjs",
     "target": "es5",
     "lib": ["es6", "dom", "es2016", "es2017"],
     "sourceMap": true,
     "allowJs": false,
     "jsx": "react",
-    "declaration": true,
     "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
