--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@material-ui/icons": "^1.0.0",
     "@types/classnames": "^2.2.3",
     "@types/jest": "^22.2.3",
+    "@types/node": "9",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
     "@types/recompose": "^0.26.1",
