--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "module": "build/es/index.js",
   "jsnext:main": "build/es/index.js",
   "types": "build/es/index.d.ts",
+  "files": ["build"],
   "scripts": {
     "test": "cross-env CI=1 react-scripts-ts test --env=jsdom",
     "test:watch": "react-scripts-ts test --env=jsdom",
@@ -57,8 +58,5 @@
     "rollup-plugin-typescript2": "^0.13.0",
     "rollup-plugin-url": "^1.3.0",
     "typescript": "^2.8.3"
-  },
-  "files": [
-    "dist"
-  ]
+  }
 }
