--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ma-common",
-  "version": "3.0.0-alpha5",
+  "version": "3.0.1",
   "description": "",
   "author": "kaltsimon",
   "license": "MIT",
