--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "jsnext:main": "build/es/index.js",
   "types": "build/es/index.d.ts",
   "files": [
-    "build"
+    "build", "yarn.lock"
   ],
   "scripts": {
     "test": "cross-env CI=1 react-scripts-ts test --env=jsdom",
