--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ma-common",
-  "version": "3.0.6",
+  "version": "3.0.7",
   "description": "",
   "author": "kaltsimon",
   "license": "MIT",
@@ -10,7 +10,8 @@
   "jsnext:main": "build/es/index.js",
   "types": "build/es/index.d.ts",
   "files": [
-    "build", "yarn.lock"
+    "build",
+    "yarn.lock"
   ],
   "scripts": {
     "test": "cross-env CI=1 react-scripts-ts test --env=jsdom",
