--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@types/react-redux": "^5.0.19",
     "classnames": "^2.2.5",
+    "core-js": "^2.5.6",
     "react-redux": "^5.0.7",
     "recompose": "^0.27.0",
     "redux": "^4.0.0",
